# CMake_CrossCompatabilityTest

./: .gitignore  CMakeLists.txt  main.cpp
Build_Instructions/: Linux.txt  Mac.txt  Windows.txt
Build_Instructions/Linux/: Linux.md  Linux.txt  README.md
Build_Instructions/Mac/: Mac.txt  README.md
Build_Instructions/Windows/: README.md  Windows.md  Windows.txt
src/: ClassA.cpp  ClassB.cpp
